--- a/src/styles/Search.scss
+++ b/src/styles/Search.scss
@@ -3,20 +3,25 @@
 
 .search {
   flex: 1 0 auto;
-  height: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
-  // padding: 10px;
 
   .search-input {
-    width: 400px;
-    margin-right: 20px;
+    width: 300px;
     height: 30px;
     border-radius: 5px;
     padding-left: 10px;
-    // height: 100%;
-    // margin: 40px;
+    margin: 10px 0;
+  }
+
+  @include md {
+    justify-content: flex-end;
+
+    .search-input {
+      margin: 0 20px;
+      width: 400px;
+    }
   }
 }
